--- a/configs/cam11.yaml
+++ b/configs/cam11.yaml
@@ -29,3 +29,6 @@ CAM:
   TEST2: [[617,578],[600,358],[796,361],[983,573]]
   ROI_SPLIT_REGION: [[[253,583],[435,359],[600,358],[617,578]],  [[617,578],[600,358],[796,361],[983,573]]]
   D_THRESHOLD: [94,103]
+  
+  # point-in-moi-region threshold
+  PIM_THRESHOLD: 0.1
