--- a/configs/cam16.yaml
+++ b/configs/cam16.yaml
@@ -35,3 +35,6 @@ CAM:
   TEST3 : [[738,529],[594,337],[719,231],[1156,455]]
 
   ROI_SPLIT_REGION: [[[129,630],[48,189],[398,158],[980,485]], [[384,228],[220,143],[497,129],[698,235]], [[738,529],[594,337],[719,231],[1156,455]]]
+  
+  # point-in-moi-region threshold
+  PIM_THRESHOLD: 0.1
