--- a/configs/cam18.yaml
+++ b/configs/cam18.yaml
@@ -33,4 +33,8 @@ CAM:
   TEST1 : [[131, 307], [605, 148],[770,198],[404,447]]
   TEST2 : [[404,447],[770,198],[941, 249], [885, 691]]
   ROI_SPLIT_REGION: [[[131, 307], [605, 148],[770,198],[404,447]], [[404,447],[770,198],[941, 249], [885, 691]]]
+  
   D_THRESHOLD: [140,140]
+  
+  # point-in-moi-region threshold
+  PIM_THRESHOLD: 0.1
