--- a/configs/cam20.yaml
+++ b/configs/cam20.yaml
@@ -46,3 +46,6 @@ CAM:
   TEST6 : [[532,683],[285,429],[1279,420],[1280,720]]
 
   ROI_SPLIT_REGION: [[[924,470],[325,195],[564,164],[1151,350]], [[1088,377],[506,170],[762,140],[1237,286]], [[413,563],[178,316],[1005,224],[1238,289],[919,477]], [[234,377],[82,212],[435,180],[369,331]], [[130,272],[291,192],[588,155],[673,328],[350,500]], [[532,683],[285,429],[1279,420],[1280,720]]]
+  
+  # point-in-moi-region threshold
+  PIM_THRESHOLD: 0.1
