--- a/configs/cam3.yaml
+++ b/configs/cam3.yaml
@@ -32,3 +32,6 @@ CAM:
   TEST2 : [[594,462],[599,229],[963,247],[1274,464]]
   ROI_SPLIT_REGION : [ [[1,460],[2,336], [150, 210],[599,229],[594,462]], [[594,462],[599,229],[963,247],[1274,464]]]
   D_THRESHOLD: [80,80]
+  
+  # point-in-moi-region threshold
+  PIM_THRESHOLD: 0.1
