--- a/configs/cam6.yaml
+++ b/configs/cam6.yaml
@@ -30,3 +30,6 @@ CAM:
   TEST2 : [[612,451],[628,150],[813,152],[1224,466]]
   ROI_SPLIT_REGION: [[[11,439],[440,148],[628,150],[612,451]], [[612,451],[628,150],[813,152],[1224,466]]]
   D_THRESHOLD: [120,120]
+  
+  # point-in-moi-region threshold
+  PIM_THRESHOLD: 0.1
