--- a/configs/cam19.yaml
+++ b/configs/cam19.yaml
@@ -36,3 +36,6 @@ CAM:
   ROI_SPLIT_REGION: [[[131, 307], [605, 148],[770,198],[404,447]], [[404,447],[770,198],[941, 249], [885, 691]]]
 
   D_THRESHOLD: [120,120]
+  
+  # point-in-moi-region threshold
+  PIM_THRESHOLD: 0.1
