--- a/configs/cam22.yaml
+++ b/configs/cam22.yaml
@@ -45,3 +45,6 @@ CAM:
   TEST6 : [[0,720],[0,393],[173,320],[504,544],[335,720]]
 
   ROI_SPLIT_REGION: [[[365,506],[628,231],[813,252],[830,654]], [[86,414],[475,213],[623,230],[355,500]], [[175,322],[443,209],[583,220],[417,319]], [[67,364],[337,251],[570,227],[815,255]], [[2,594],[0,365],[139,365],[79,594]], [[0,720],[0,393],[173,320],[504,544],[335,720]]]
+  
+  # point-in-moi-region threshold
+  PIM_THRESHOLD: 0.1
