--- a/configs/cam23.yaml
+++ b/configs/cam23.yaml
@@ -30,4 +30,8 @@ CAM:
     TEST1 : [[207, 418], [803, 283],[966,322],[562,522]]
     TEST2 : [[562,522],[966,322],[1153, 368], [1090, 690]]
     ROI_SPLIT_REGION: [[[207, 418], [803, 283],[966,322],[562,522]], [[562,522],[966,322],[1153, 368], [1090, 690]]]
+    
     D_THRESHOLD: [90,90]
+    
+    # point-in-moi-region threshold
+    PIM_THRESHOLD: 0.1
