--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,6 @@ importlib-metadata==1.6.0
 imutils==0.5.3
 jdcal==1.4.1
 joblib==0.14.1
-Keras==2.3.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 kiwisolver==1.2.0
@@ -26,6 +25,7 @@ lxml==4.5.2
 Markdown==3.2.2
 matplotlib==3.3.1
 mccabe==0.6.1
+mpmath==1.1.0
 numpy==1.19.1
 opencv-python==4.3.0.36
 parse-utils==1.2
@@ -40,12 +40,13 @@ scikit-learn==0.22.2
 scipy==1.5.2
 Shapely==1.7.0
 six==1.15.0
+sympy==1.6.2
 tensorboard==1.14.0
 tensorflow==1.14.0
 tensorflow-estimator==1.14.0
 termcolor==1.1.0
 threadpoolctl==2.1.0
-# torch @ https://download.pytorch.org/whl/cu100/torch-1.1.0-cp37-cp37m-win_amd64.whl
+torch @ https://download.pytorch.org/whl/cu100/torch-1.1.0-cp37-cp37m-win_amd64.whl
 tqdm==4.48.2
 Werkzeug==1.0.1
 wrapt==1.12.1
