--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ Markdown==3.2.2
 matplotlib==3.3.1
 mccabe==0.6.1
 numpy==1.19.1
-opencv-python==4.3.0.36
+opencv-python==4.2.0.32
 parse-utils==1.2
 Pillow==7.2.0
 protobuf==3.12.4
@@ -50,3 +50,5 @@ tqdm==4.48.2
 Werkzeug==1.0.1
 wrapt==1.12.1
 zipp==3.1.0
+torch 
+torchvision
