--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ scikit-learn==0.22.2
 scipy==1.5.2
 Shapely==1.7.0
 six==1.15.0
-sympy==1.6.2
+# sympy==1.6.2
 tensorboard==1.14.0
 tensorflow==1.14.0
 tensorflow-estimator==1.14.0
