--- a/requirements.txt
+++ b/requirements.txt
@@ -18,14 +18,14 @@ importlib-metadata==1.6.0
 imutils==0.5.3
 jdcal==1.4.1
 joblib==0.14.1
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
+# Keras-Applications==1.0.8
+# Keras-Preprocessing==1.1.2
 kiwisolver==1.2.0
 lxml==4.5.2
 Markdown==3.2.2
 matplotlib==3.3.1
 mccabe==0.6.1
-mpmath==1.1.0
+mpmath==1.1.0S
 numpy==1.19.1
 opencv-python==4.2.0.32
 parse-utils==1.2
