--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ lxml==4.5.2
 Markdown==3.2.2
 matplotlib==3.3.1
 mccabe==0.6.1
-mpmath==1.1.0S
+mpmath==1.1.0
 numpy==1.19.1
 opencv-python==4.2.0.32
 parse-utils==1.2
